crates/pluresdb-px/tests/conformance_corpus/invalid/04_entity_fields_shape_error.px
entity invalid_entity:
  prefix: "inv"
  fields:
    - id: string
    - count: int
